--- a/apps/web/src/app/shared/components/profile-menu/appearance-menu/appearance-menu.component.scss
+++ b/apps/web/src/app/shared/components/profile-menu/appearance-menu/appearance-menu.component.scss
@@ -1,3 +1,9 @@
+@use '../../../../../styles/variables';
+
 [cdkMenu] {
   width: initial;
+
+  .active {
+    background-color: var(--active-item-bg);
+  }
 }
