chore: add data-theme attribute to select system theme button

--- a/apps/web/src/app/shared/components/profile-menu/appearance-menu/appearance-menu.component.html
+++ b/apps/web/src/app/shared/components/profile-menu/appearance-menu/appearance-menu.component.html
@@ -4,6 +4,7 @@
       <div class="menu-group" cdkMenuGroup>
         <button
           (click)="setTheme($event)"
+          data-theme="system"
           [ngClass]="{ 'menu-item': true, active: theme == 'system' }"
           cdkMenuItem
         >
