chore: add label to mic button

--- a/apps/web/src/app/core/components/header/header.component.html
+++ b/apps/web/src/app/core/components/header/header.component.html
@@ -11,7 +11,7 @@
       />
       <i class="bx bx-search sm"></i>
     </div>
-    <button class="button icon primary ghost">
+    <button aria-label="Search with voice" class="button icon primary ghost">
       <i class="bx bxs-microphone sm"></i>
     </button>
   </div>
