chore: added a gray-smooth-dark variable

--- a/apps/web/src/app/core/components/sidebar/sidebar.component.scss
+++ b/apps/web/src/app/core/components/sidebar/sidebar.component.scss
@@ -12,7 +12,7 @@
   :host {
     --sidebar-background: #{variables.$clr-dark-void};
     --active-menu-btn-clr: #{variables.$clr-snow};
-    --menu-item-focused-bg: #{variables.$clr-gluon-gray};
+    --menu-item-focused-bg: #{variables.$clr-gray-smooth-dark};
   }
 }
 
