--- a/apps/web/src/styles/_variables.scss
+++ b/apps/web/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $clr-slate-gray: #262626;
 $clr-dusty-gray: #878787;
 $clr-snow: #fbfbfb;
 $clr-gray-smooth: #f4f4f4;
+$clr-gray-smooth-dark: rgba($clr-slate-gray, 0.2);
 
 $shadow-smooth: 0px 4px 2px 0px rgba(0, 0, 0, 0.02);
 $shadow-smooth-dark: 0px 4px 4px 0px rgba(0, 0, 0, 0.02);
