--- a/apps/web/src/styles/_variables.scss
+++ b/apps/web/src/styles/_variables.scss
@@ -46,6 +46,7 @@ $fs-lg: 1.3rem;
 
 $fs-icon: 1.75rem;
 $fs-icon-sm: 1.5rem;
+$fs-icon-xs: 1.25rem;
 
 $radius-rounded: 1000px;
 $radius-round: 1rem;
