style: fixed the aria-expanded style

--- a/apps/web/src/app/shared/components/profile-menu/user-profile/user-profile.component.scss
+++ b/apps/web/src/app/shared/components/profile-menu/user-profile/user-profile.component.scss
@@ -5,7 +5,7 @@
 }
 
 #profile-menu[aria-expanded='true'] {
-  outline: 3px solid variables.$clr-slate-gray;
+  outline: 3px solid rgba(variables.$clr-dusty-gray, 0.2);
   outline-offset: 1px;
 }
 
