chore: fetch videos for browse page

--- a/apps/web/src/app/core/pages/feed/history-page/history-page.component.html
+++ b/apps/web/src/app/core/pages/feed/history-page/history-page.component.html
@@ -1,4 +1,6 @@
 <h1>Watch History</h1>
-@for (video of watchHistory$ | async; track video._id) {
-  {{ video.title }}
-}
+<app-item-grid>
+  @for (video of watchHistory$ | async; track video._id) {
+    <app-video-card [video]="video" />
+  }
+</app-item-grid>
