--- a/apps/web/src/app/core/pages/home/home.component.html
+++ b/apps/web/src/app/core/pages/home/home.component.html
@@ -1,3 +1,8 @@
 <section>
   <h1>Browse</h1>
+  <app-item-grid>
+    @for (video of videos$ | async; track video._id) {
+      <app-video-card [video]="video" />
+    }
+  </app-item-grid>
 </section>
