chore: toggle subscribe button state when subscribed

--- a/apps/web/src/app/core/components/sidebar-subscription-list/sidebar-subscription-list.component.html
+++ b/apps/web/src/app/core/components/sidebar-subscription-list/sidebar-subscription-list.component.html
@@ -11,8 +11,10 @@
             >
               <img
                 class="avatar"
-                [src]="channel.avatar.secure_url"
+                [ngSrc]="channel.avatar.public_id"
                 [alt]="channel.displayName"
+                width="80"
+                height="80"
               />
               <span>{{ channel.displayName }}</span>
             </a>
