--- a/apps/web/src/app/shared/components/profile-menu/user-profile/user-profile.component.html
+++ b/apps/web/src/app/shared/components/profile-menu/user-profile/user-profile.component.html
@@ -6,7 +6,7 @@
   >
     <img
       class="avatar"
-      [src]="session.avatar.secure_url"
+      [ngSrc]="session.avatar.public_id"
       width="36"
       height="36"
       [alt]="session.displayName"
