--- a/apps/web/src/app/core/components/feed/subscription-card/subscription-card.component.html
+++ b/apps/web/src/app/core/components/feed/subscription-card/subscription-card.component.html
@@ -6,7 +6,7 @@
     >
       <img
         class="subscription-avatar"
-        [ngSrc]="subscription.avatar.secure_url"
+        [ngSrc]="subscription.avatar.public_id"
         [alt]="subscription.displayName"
         width="80"
         height="80"
