--- a/apps/web/src/app/core/components/watch-page-channel-bar/watch-page-channel-bar.component.scss
+++ b/apps/web/src/app/core/components/watch-page-channel-bar/watch-page-channel-bar.component.scss
@@ -9,6 +9,15 @@
 
     > div:first-child {
       flex-shrink: 0;
+      width: 40px;
+      height: 40px;
+
+      a,
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
     }
 
     .owner-avatar {
