refactor: subscribe button active state is now accepted as input

--- a/apps/web/src/app/core/components/subscribe-button/subscribe-button.component.html
+++ b/apps/web/src/app/core/components/subscribe-button/subscribe-button.component.html
@@ -1,13 +1,11 @@
-@if (subscriptionStatus$ | async; as status) {
-  <button
-    class="button"
-    [ngClass]="{ ghost: status.isSubscribed }"
-    (click)="toggleSubscription()"
-  >
-    @if (status.isSubscribed) {
-      <i class="bx bxs-bell-ring xs"></i> Unsubscribe
-    } @else {
-      <i class="bx bx-bell xs"></i> Subscribe
-    }
-  </button>
-}
+<button
+  class="button"
+  [ngClass]="{ ghost: isSubscribed$ | async }"
+  (click)="toggleSubscription()"
+>
+  @if (isSubscribed$ | async) {
+    <i class="bx bxs-bell-ring xs"></i> Unsubscribe
+  } @else {
+    <i class="bx bx-bell xs"></i> Subscribe
+  }
+</button>
