refactor: send is subscribed input to subscribe button

--- a/apps/web/src/app/core/components/feed/subscription-card/subscription-card.component.html
+++ b/apps/web/src/app/core/components/feed/subscription-card/subscription-card.component.html
@@ -29,8 +29,9 @@
     </a>
   </div>
   <div>
-    <button class="button ghost">
-      <i class="bx bxs-bell-ring xs"></i> Subscribed
-    </button>
+    <app-subscribe-button
+      [channelId]="subscription._id"
+      [isSubscribed]="true"
+    />
   </div>
 </div>
