--- a/apps/web/src/app/core/components/watch-page-channel-bar/watch-page-channel-bar.component.html
+++ b/apps/web/src/app/core/components/watch-page-channel-bar/watch-page-channel-bar.component.html
@@ -14,7 +14,10 @@
       </p>
     </div>
     <div>
-      <app-subscribe-button [channelId]="video.owner._id" />
+      <app-subscribe-button
+        [channelId]="video.owner._id"
+        [isSubscribed]="video.owner.isSubscribed"
+      />
     </div>
   </div>
 </div>
