--- a/apps/web/src/app/core/components/watch-page-channel-bar/watch-page-channel-bar.component.html
+++ b/apps/web/src/app/core/components/watch-page-channel-bar/watch-page-channel-bar.component.html
@@ -10,7 +10,7 @@
         video.owner.displayName
       }}</a>
       <p class="owner-subscribers">
-        {{ 1453032 | abbreviateNumber }} subscribers
+        {{ video.owner.totalSubscribers | abbreviateNumber }} subscribers
       </p>
     </div>
     <div>
