--- a/apps/web/src/app/core/components/video-card/video-card.component.scss
+++ b/apps/web/src/app/core/components/video-card/video-card.component.scss
@@ -37,7 +37,7 @@
     position: relative;
     cursor: pointer;
 
-    .video-views {
+    .video-duration {
       position: absolute;
       right: variables.$spacing-sm;
       bottom: variables.$spacing-sm;
