chore: improvements to expandable-text-component

--- a/apps/web/src/app/core/pages/watch/watch.component.html
+++ b/apps/web/src/app/core/pages/watch/watch.component.html
@@ -12,13 +12,7 @@
               <span>Uploaded {{ video.createdAt | date }}</span>
             </div>
           </div>
-          <app-expandable-text
-            [text]="
-              video.description +
-              'Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint amet libero ab adipisci illum esse temporibus impedit cumque nisi exercitationem vitae qui omnis, voluptas alias odit veritatis! Corrupti, doloremque illo?'
-            "
-            [id]="video._id"
-          />
+          <app-expandable-text [text]="video.description" [id]="video._id" />
         </div>
       </div>
     </div>
