--- a/apps/web/src/app/core/pages/feed/you-page/you-page.component.html
+++ b/apps/web/src/app/core/pages/feed/you-page/you-page.component.html
@@ -1,1 +1,52 @@
-<h1>You</h1>
+@if (history$ | async; as history) {
+  <section>
+    <div class="section-header">
+      <div class="section-heading">
+        <div class="icon"><i class="bx bx-history sm"></i></div>
+        <h2>History</h2>
+      </div>
+      <a routerLink="/feed/history" class="button ghost">See all</a>
+    </div>
+    <app-item-grid>
+      @for (video of history; track video._id) {
+        <app-video-card [video]="video" />
+      }
+    </app-item-grid>
+  </section>
+}
+
+<section>
+  <div class="section-header">
+    <div class="section-heading">
+      <div class="icon"><i class="bx bxs-playlist sm"></i></div>
+      <h2>Playlists</h2>
+    </div>
+    <a routerLink="" class="button ghost">See all</a>
+  </div>
+</section>
+
+<section>
+  <div class="section-header">
+    <div class="section-heading">
+      <div class="icon"><i class="bx bxs-like sm"></i></div>
+      <h2>Liked Videos</h2>
+    </div>
+    <a routerLink="" class="button ghost">See all</a>
+  </div>
+</section>
+
+@if (uploads$ | async; as uploads) {
+  <section>
+    <div class="section-header">
+      <div class="section-heading">
+        <div class="icon"><i class="bx bx-upload sm"></i></div>
+        <h2>Your Uploads</h2>
+      </div>
+    </div>
+    <app-item-grid>
+      @for (video of uploads; track video._id) {
+        <app-video-card [video]="video" />
+      }
+    </app-item-grid>
+  </section>
+}
