--- a/apps/web/src/app/core/pages/feed/you-page/you-page.component.scss
+++ b/apps/web/src/app/core/pages/feed/you-page/you-page.component.scss
@@ -11,20 +11,35 @@
   }
 }
 
+section {
+  &:not(:first-child) {
+    border-bottom: 1px solid var(--section-header-border);
+    .section-header {
+      margin-top: calc(variables.$spacing-lg * 2);
+    }
+  }
+  &:first-child {
+    .section-header {
+      border-top: 0;
+    }
+  }
+}
+
 .section-header {
   @include mixins.flex-cv;
   justify-content: space-between;
-  margin-top: variables.$spacing-normal;
-  border-bottom: 1px solid var(--section-header-border);
+  margin-top: 0;
+  border-top: 1px solid var(--section-header-border);
 
   .section-heading {
     @include mixins.flex-cv;
     gap: variables.$spacing-normal;
-    margin-bottom: calc(variables.$spacing-sm * 2);
+    margin-block: calc(variables.$spacing-sm * 2);
 
     h2 {
       font-weight: variables.$fw-semibold;
       font-size: calc(variables.$fs-normal * 1.3);
+      margin: 0;
     }
 
     .icon {
