chore: change card hover background in light mode to clr.snow

--- a/apps/web/src/app/core/components/feed/subscription-card/subscription-card.component.scss
+++ b/apps/web/src/app/core/components/feed/subscription-card/subscription-card.component.scss
@@ -2,7 +2,7 @@
 @use '../../../../../styles/mixins';
 
 :host {
-  --card-hovered-background: #f1efee;
+  --card-hovered-background: #{variables.$clr-snow};
   --card-shadow: #{variables.$shadow-smooth};
   --card-border: #e5e5e5;
 }
